kuber_task/configs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wine-service
spec:
  selector:
    app: wine
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
