kuber_task/configs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wine-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite_target: /
spec:
  rules:
    - http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: wine-model-app
               port:
                 number: 80
